# c2

./: LICENSE  README.md  implant.py  requirements.txt
c2/: __init__.py  __main__.py  chunks.py  cli.py  crypto.py  db.py  doh.py  listener.py  pipe_server.py  server.py  stage.py  state.py
c2/data/: c2.db
client/: CMakeLists.txt  SMOKE_TEST.md  c2_client.sln  c2_client.vcxproj  generate_vs_project.ps1
client/src/: main.cpp  version.aps  version.rc
client/src/Stage/: Stage.cpp  Stage.h
client/src/audit/: Imports.cpp  Imports.h
client/src/core/: Base64.cpp  Base64.h  Beacon.cpp  Beacon.h  Chunked.cpp  Chunked.h  Config.h  Crypto.cpp  Crypto.h  Protocol.cpp  Protocol.h  StageLog.h  Transport.cpp  Transport.h
client/src/evasive/: AmsiEtw.cpp  AmsiEtw.h  AntiAnalysis.cpp  AntiAnalysis.h  ApiHash.cpp  ApiHash.h  AsmStubs.cpp  ContextSpoof.cpp  ContextSpoof.h  Doppel.cpp  Doppel.h  Herpaderp.cpp  Herpaderp.h  HwbpClean.cpp  HwbpClean.h  Inject.cpp  Inject.h  Loader.cpp  Loader.h  MemGuard.cpp  MemGuard.h  NtHashes.h  NtTypes.cpp  NtTypes.h  Obf.cpp  Obf.h  Opsec.cpp  Opsec.h  ProcSpoof.cpp  ProcSpoof.h  Sandbox.cpp  Sandbox.h  SleepEkko.asm  SleepEkko.cpp  SleepEkko.h  StackSpoof.asm  StackSpoof.cpp  StackSpoof.h  Strings.cpp  Strings.h  (+7 more)
client/src/forensics/: AntiForensics.cpp  AntiForensics.h
client/src/persist/: Install.cpp  Install.h  SelfDel.cpp  SelfDel.h
client/src/tasks/: Clipboard.cpp  Clipboard.h  Keylogger.cpp  Keylogger.h  Lateral.cpp  Lateral.h  Runner.cpp  Runner.h  Screenshot.cpp  Screenshot.h  Tokens.cpp  Tokens.h  UacBypass.cpp  UacBypass.h
client/src/transport/: DohTransport.cpp  DohTransport.h  FrontTransport.cpp  FrontTransport.h  HttpsTransport.cpp  HttpsTransport.h  Malleable.cpp  Malleable.h  PipeTransport.cpp  PipeTransport.h  Profile.cpp  Profile.h
client/tools/: malleable.cna  malleable.json  strip_rich.py
infra/: README.md  docker-compose.yml
infra/caddy/: Caddyfile
tools/: validate_defender.ps1
